# screeps-body-utils

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
src/: lib.rs
src/body/: body_calculation_helpers.rs  body_calculation_helpers_tests.rs  body_generation.rs  body_generation_tests.rs  bodyspec.rs  bodyspec_tests.rs  boost_selection_config.rs  mod.rs
src/boost/: bom.rs  bom_tests.rs  boost.rs  boost_tests.rs  mod.rs  reaction.rs  reaction_chains.rs  reaction_tests.rs
src/constants/: mod.rs  resources.rs
src/helpers/: functions.rs  mod.rs
